--- a/templates/recipe_all.html
+++ b/templates/recipe_all.html
@@ -28,8 +28,10 @@
         <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-recipe w-100">
         {% endif %}
         <div class="image-flash">
-          <p class="author image-flash-author">Author: {{ recipe.author }}</p>
-          <a href="{% url 'category' recipe.category %}" class="category image-flash-category">Category: {{ recipe.category }}</a>
+          <a href="{% url 'show-profile' recipe.author.profile.pk %}" 
+          class="author image-flash-author">Author: {{ recipe.author }}</a>
+        <a href="{% url 'category' recipe.category %}" 
+          class="category image-flash-category">Category: {{ recipe.category }}</a>
         </div>
       </div>
       <div class="card-body card-body-recipe-list">
