--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -29,8 +29,10 @@
           <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top shadow">
           {% endif %}
           <div class="image-flash">
-            <a href="{% url 'show-profile' recipe.author.profile.pk %}" class="author image-flash-author">Author: {{ recipe.author }}</a>
-            <a href="{% url 'category' recipe.category %}" class="category image-flash-category">{{ recipe.category }}</a>
+            <a href="{% url 'show-profile' recipe.author.profile.pk %}" 
+              class="author image-flash-author">Author: {{ recipe.author }}</a>
+            <a href="{% url 'category' recipe.category %}" 
+              class="category image-flash-category">{{ recipe.category }}</a>
           </div>
         </div>
       </div>
