--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ root {
     --light-col: #E4E5EA;
     --accent-col: #8EC63F;
     --accent-basic-col: #0E9A45;
+    --bootstrap-green: #198754;
 
     --main-font: 'Sen', sans-serif;
     --additional-font: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -56,7 +57,7 @@ a {
 }
 
 .fa-heart {
-    color: #0E9A45;
+    color: #198754;
 }
 
 /*--------------------------------------- 
@@ -73,7 +74,7 @@ a {
     font-family: 'Sen', sans-serif;
     font-weight: bold;
     font-weight: bold;
-    color: #0E9A45;
+    color: #198754;
 }
 
 .nav-s {
@@ -114,7 +115,7 @@ a {
 
 .active-nav {
     height: 3px;
-    background-color: #8EC63F;
+    background-color: #198754;
     border-radius: 25px;
     position: absolute;
     left: 0;
@@ -157,7 +158,7 @@ a {
     left: 0;
     width: 100%;
     min-height: 130vh;
-    background: linear-gradient(to right, #fff, #8EC63F, #0E9A45);
+    background: linear-gradient(to right, #fff, #8EC63F, #0E9A45, #198754);
 }
 
 .section-blank {
