--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -30,9 +30,9 @@
           {% endif %}
           <div class="image-flash">
             <a href="{% url 'show-profile' recipe.author.profile.pk %}" 
-              class="author image-flash-author">Author: {{ recipe.author }}</a>
+              class="author image-flash-author"><small>Author: </small> {{ recipe.author }}</a><br>
             <a href="{% url 'category' recipe.category %}" 
-              class="category image-flash-category">{{ recipe.category }}</a>
+              class="category image-flash-category"><small>Category: </small>{{ recipe.category }}</a><br>
           </div>
         </div>
       </div>
