--- a/templates/recipe_add_category.html
+++ b/templates/recipe_add_category.html
@@ -17,8 +17,8 @@
             <h5>Category was Submitted Succesfully, {{ user }}!</h5>
             <br>
             <br>
-            <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
-            <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success">My Recipes</a>
+            <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-md-2 offset-md-4 btn-outline-success">Back</a>
+            <a href="{% url 'recipe-mylist' %}" class="btn col-10 offset-1 col-md-2 btn-outline-success">My Recipes</a>
         </center>
 
         {% else %}
