--- a/templates/recipe_mylist.html
+++ b/templates/recipe_mylist.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   
-  <div class="container-fluid">
+  <div class="container-fluid g-2 p-3">
     <div class="row">
       <div class="col-md-8 offset-md-2 mt-3 left">
         <div class="row">
@@ -35,11 +35,11 @@
                   <p>Awaiting Admin's Authorisation</p>
                   <hr>
                 {% else %}
-                  <a href="{% url 'recipe_detail' recipe.slug %}" class="btn btn-sm btn-outline-secondary"><span>View</span></a>    
+                  <a href="{% url 'recipe_detail' recipe.slug %}" class="btn btn-sm col-5 btn-outline-secondary"><span>View</span></a>   
                 {% endif %} 
-                <a href="{% url 'add-recipe' %}" class="btn btn-sm btn-outline-warning"><span>New</span></a> 
-                <a href="{% url 'recipe-update' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Update</span></a>
-                <a href="{% url 'recipe-delete' recipe.pk %}" class="btn btn-sm btn-outline-danger"><span>Delete</span></a>
+                <a href="{% url 'recipe-update' recipe.pk %}" class="btn btn-sm col-6 btn-outline-success"><span>Update</span></a><br><br>
+                <a href="{% url 'add-recipe' %}" class="btn btn-sm col-5 btn-outline-warning"><span>New</span></a> 
+                <a href="{% url 'recipe-delete' recipe.pk %}" class="btn btn-sm col-6 btn-outline-danger"><span>Delete</span></a>
                 
               </div>
             </div>
